# eventually-rs

./: .clippy.toml  .cspell.json  .editorconfig  .gitignore  .gitpod.yml  .jscpd.json  CONTIBUTING.md  CONTRIBUTING.md  Cargo.toml  README.md  aliases.js  codecov.yml  crates.js  flake.nix  help.html  renovate.json5  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
eventually/: Cargo.toml  LICENSE  README.md  all.html  fn.spawn.html  index.html  sidebar-items.js  struct.AggregateRoot.html  struct.AggregateRootBuilder.html  struct.AggregateRootFactory.html  struct.Message.html  struct.Projector.html  struct.Repository.html  trait.Aggregate.html  trait.AggregateExt.html  trait.EventStore.html  trait.EventSubscriber.html  trait.Identifiable.html  trait.Projection.html  trait.Store.html  trait.Subscription.html  trait.Versioned.html  type.AggregateId.html
eventually-app-example/: Cargo.toml
eventually-app-example/src/: api.rs  config.rs  lib.rs  order.rs  state.rs
eventually-app-example/tests/: acceptance_tests.rs
eventually-core/: Cargo.toml
eventually-core/src/: aggregate.rs  command.rs  lib.rs  projection.rs  query.rs  repository.rs  serde.rs  store.rs  subscription.rs  versioning.rs
eventually-examples/: Cargo.toml
eventually-examples/benches/: bench.rs
eventually-examples/src/: main.rs  point.rs
eventually-macros/: Cargo.toml
eventually-macros/src/: lib.rs
eventually-memory/: Cargo.toml
eventually-memory/benches/: bench.rs  memory_benchmark.rs
eventually-memory/src/: lib.rs
eventually-new/: Cargo.toml
eventually-new/src/: aggregate.rs  eventstore.rs  inmemory.rs  lib.rs  scenario.rs  test.rs
eventually-postgres/: Cargo.toml
eventually-postgres/migrations/: 1_events.down.sql  1_events.up.sql  2_aggregates.down.sql  2_aggregates.up.sql
eventually-postgres/src/: aggregate.rs  event.rs  lib.rs  repository.rs  serde.rs  store.rs  subscriber.rs  subscription.rs
eventually-postgres/tests/: aggregate_repository.rs  event_store.rs  store.rs  subscriber.rs
eventually-redis/: Cargo.toml
eventually-redis/src/: append_to_store.lua  lib.rs  store.rs  stream.rs  subscriber.rs  subscription.rs
eventually-redis/tests/: store.rs
eventually-test/: Cargo.toml  create-order.sh
eventually-test/src/: api.rs  config.rs  lib.rs  log.rs  main.rs  order.rs  state.rs
eventually-test/tests/: acceptance_tests.rs
eventually-util/: Cargo.toml
eventually-util/benches/: event-store-inmemory-bench.rs
eventually-util/src/: inmemory.rs  lib.rs  notify.rs  optional.rs  versioned.rs
eventually-v0-5-0/: Cargo.toml
eventually-v0-5-0/src/: aggregate.rs  command.rs  event.rs  lib.rs  metadata.rs  test.rs  version.rs
eventually/aggregate/: enum.EventSourcedError.html  enum.EventSourcedRepositoryError.html  enum.RehydrateError.html  enum.RepositoryGetError.html  index.html  sidebar-items.js  struct.AggregateRoot.html  struct.AggregateRootBuilder.html  struct.AggregateRootFactory.html  struct.Context.html  struct.EventSourced.html  struct.EventSourcedRepository.html  struct.Repository.html  struct.Root.html  struct.Versioned.html  trait.Aggregate.html  trait.AggregateExt.html  trait.Getter.html  trait.Identifiable.html  trait.Optional.html  trait.ReferentialAggregate.html  trait.Repository.html  trait.Root.html  trait.Saver.html  type.AggregateId.html  type.ErrorOf.html  type.EventOf.html  type.StateOf.html
eventually/command/: index.html  sidebar-items.js  struct.DirectDispatcher.html  trait.Dispatcher.html  trait.Handler.html  type.AggregateOf.html  type.Command.html  type.CommandOf.html  type.Envelope.html  type.ErrorOf.html  type.Result.html
eventually/event/: enum.StreamVersionExpected.html  enum.VersionSelect.html  index.html  sidebar-items.js  struct.Persisted.html  trait.Appender.html  trait.Store.html  trait.Streamer.html  type.Envelope.html  type.Event.html  type.PersistedEvents.html  type.Stream.html
eventually/examples/: optional_person.rs  optional_point.rs  person.rs  point.rs
eventually/inmemory/: enum.Error.html  enum.SubscriberError.html  index.html  sidebar-items.js  struct.ConflictError.html  struct.EventStore.html  struct.EventStoreBuilder.html  struct.LaggedError.html  struct.Projector.html  struct.ProjectorBuilder.html  struct.SubscriberError.html
eventually/message/: index.html  sidebar-items.js  struct.Envelope.html  struct.Message.html  trait.Message.html  trait.Payload.html  type.Metadata.html
eventually/metadata/: enum.Value.html  index.html  struct.Metadata.html
eventually/optional/: index.html  sidebar-items.js  struct.AsAggregate.html  struct.AsHandler.html  struct.IntoAggregate.html  trait.Aggregate.html  trait.CommandHandler.html  type.EventOf.html  type.StateOf.html
eventually/postgres/: enum.Error.html  enum.SubscriberError.html  index.html  sidebar-items.js  struct.DeserializeError.html  struct.EventStore.html  struct.EventStoreBuilder.html  struct.EventStoreBuilderMigrated.html  struct.EventSubscriber.html  struct.Persistent.html  struct.PersistentBuilder.html  type.PoolResult.html  type.Result.html
eventually/projection/: index.html  trait.Projection.html
eventually/query/: index.html  sidebar-items.js  trait.Handler.html  type.Envelope.html
eventually/repository/: enum.Error.html  index.html  sidebar-items.js  struct.Repository.html  type.Result.html
eventually/serde/: index.html  sidebar-items.js  struct.Convert.html  struct.Json.html  struct.ProtoJson.html  struct.Protobuf.html  trait.Deserializer.html  trait.Serde.html  trait.Serializer.html
eventually/src/: aggregate.rs  command.rs  entity.rs  event.rs  eventstore.rs  inmemory.rs  lib.rs  message.rs  metadata.rs  optional.rs  repository.rs  scenario.rs  serde.rs  store.rs  subscription.rs  test.rs  tracing.rs  util.rs  version.rs  versioned.rs  versioning.rs
eventually/store/: enum.Expected.html  enum.Select.html  index.html  sidebar-items.js  struct.Persisted.html  struct.PersistedEvent.html  trait.AppendError.html  trait.EventStore.html  type.EventStream.html
eventually/subscription/: enum.Error.html  index.html  (+6 more)
(+956 files in other folders)
