[package]
name = "eventually-core"
description = "Foundation crate for using Event Sourcing in Rust applications"
version = "0.3.0"
edition = "2018"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ar3s3ru/eventually-rs"

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
thiserror = "1.0"
