[package]
name = "eventually-core"
description = "Foundation crate for using Event Sourcing in Rust applications"
version = "0.4.0"
edition = "2018"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/eventually-rs/eventually-rs"

[features]
default = []
with-tracing = ["tracing", "tracing-futures"]
full = ["serde", "with-tracing"]

[dependencies]
anyhow = "1.0"
futures = { version = "0.3", features = ["async-await"] }
thiserror = "1.0"
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
