[package]
name = "eventually-examples"
version = "0.1.0"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
tokio-test = "0.2"
rand = "0.7"

eventually = { path = "../eventually" }
eventually-memory = { path = "../eventually-memory" }

[dev-dependencies]
criterion = "0.3"

[lib]
name = "point"
path = "src/point.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false
