[package]
name = "eventually-memory"
version = "0.3.0"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", features = ["async-await"] }

eventually-core = { path = "../eventually-core" }

[dev-dependencies]
tokio-test = "0.2"
criterion = "0.3"

[[bench]]
name = "memory_benchmark"
harness = false
