[package]
name = "eventually-new"
version = "0.1.0"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-tracing = ["tracing", "tracing-futures"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
serde = { version = "1", optional = true }
thiserror = "1"
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "0.3", features = ["macros", "rt"] }
