[package]
name = "eventually-postgres"
description = "PostgreSQL-specific trait implementations and utilities for the eventually crate"
version = "0.5.0"
edition = "2021"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/get-eventually/eventually-rs"

categories = ["web-programming", "asynchronous"]
keywords = ["postgres", "postgresql", "database", "ddd", "event-sourcing"]

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
eventually = { path = "../eventually", version = "0.5.0", features = [
    "serde-json",
] }
futures = "0.3.29"
lazy_static = "1.4.0"
regex = "1.10.2"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
eventually = { path = "../eventually", version = "0.5.0", features = [
    "serde-json",
] }
eventually-macros = { path = "../eventually-macros", version = "0.1.0" }
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"
