[package]
name = "eventually-postgres"
description = "PostgreSQL-specific trait implementations and utilities for the eventually crate"
version = "0.5.0"
edition = "2021"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/get-eventually/eventually-rs"

categories = ["web-programming", "asynchronous"]
keywords = ["postgres", "postgresql", "database", "ddd", "event-sourcing"]

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
chrono = "0.4.34"
eventually = { path = "../eventually", version = "0.5.0", features = [
    "serde-json",
] }
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.3"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
thiserror = "1.0.57"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt"] }
eventually = { path = "../eventually", version = "0.5.0", features = [
    "serde-json",
] }
eventually-macros = { path = "../eventually-macros", version = "0.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.9.0"
