[package]
name = "eventually-postgres"
description = "PostgreSQL-specific trait implementations and utilities for the eventually crate"
version = "0.5.0"
edition = "2021"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/get-eventually/eventually-rs"

categories = ["web-programming", "asynchronous"]
keywords = ["postgres", "postgresql", "database", "ddd", "event-sourcing"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.77"
chrono = "0.4.40"
eventually-core = { path = "../eventually-core", version = "0.5.0", features = [
    "serde-json",
] }
futures = "0.3.31"
regex = "1.11.1"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt"] }
eventually-macros = { path = "../eventually-macros", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
