[package]
name = "eventually-test"
version = "0.3.0"
edition = "2018"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"

[dependencies]
eventually = { path = "../eventually", features = ["full"] }
eventually-postgres = { path = "../eventually-postgres" }

chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
envconfig = "0.8"
envconfig_derive = "0.8"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.8"
tokio = { version = "0.2", features = ["macros", "sync"] }
tokio-postgres = "0.5"
