[package]
name = "eventually-test"
version = "0.4.0"
edition = "2018"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"

[dependencies]
eventually = { version = "0.4", path = "../eventually", features = ["full"] }
eventually-postgres = { version = "0.1", path = "../eventually-postgres" }

chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
envconfig = "0.8"
envconfig_derive = "0.8"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = { version = "0.3", features = ["tokio02"] }
tide = "0.13.0"
tokio = { version = "0.2", features = ["sync"] }
tokio-postgres = "0.5"
