[package]
name = "eventually-util"
description = "Extension crate containing utility components for using Event Sourcing in Rust applications"
version = "0.4.0-alpha.1"
edition = "2018"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ar3s3ru/eventually-rs"

[dependencies]
eventually-core = { version = "0.4.0-alpha.1", path = "../eventually-core", features = ["full"] }

futures = { version = "0.3", features = ["async-await"] }
parking_lot = "0.11.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["sync"] }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
