[package]
name = "eventually-util"
description = "Extension crate containing utility components for using Event Sourcing in Rust applications"
version = "0.4.0"
edition = "2018"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ar3s3ru/eventually-rs"

[features]
default = []
serde = ["eventually-core/serde"]
with-tracing = ["tracing", "tracing-futures"]
full = ["serde", "with-tracing"]

[dependencies]
eventually-core = { version = "0.4.0", path = "../eventually-core" }

futures = "0.3"
parking_lot = "0.11.0"
thiserror = "1.0"
tokio = { version = "0.3", features = ["rt-core", "sync", "stream"] }
anyhow = "1.0"
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "0.3", features = ["macros"] }
