[package]
name = "eventually-v0-5-0"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
futures = "0.3.17"
thiserror = "1.0.30"

[dev-dependencies]
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
