[package]
name = "eventually"
description = "Eventually is a minimalistic crate that exposes a few building blocks to build Event-sourced applications in Rust."
version = "0.5.0"
edition = "2021"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/get-eventually/eventually-rs"

categories = ["rust-patterns", "web-programming", "asynchronous", "data-structures"]
keywords = ["architecture", "ddd", "event-sourcing", "cqrs", "es"]

[dependencies]
async-trait = "0.1.57"
futures = "0.3.24"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.51"  # NOTE: this is only used for test components and assertions.
lazy_static = "1.4.0"
serde_json = "1.0.69"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
