[package]
name = "eventually"
description = "Eventually is a minimalistic crate that exposes a few building blocks to build Event-sourced applications in Rust."
version = "0.5.0"
edition = "2021"
authors = ["Danilo Cianfrone <danilocianfr@gmail.com>"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/get-eventually/eventually-rs"

categories = [
    "rust-patterns",
    "web-programming",
    "asynchronous",
    "data-structures",
]
keywords = ["architecture", "ddd", "event-sourcing", "cqrs", "es"]

[features]
default = []
tracing = ["dep:tracing"]
serde-prost = ["dep:prost"]
serde-json = ["dep:serde_json"]
serde-protobuf = ["dep:protobuf", "dep:protobuf-json-mapping"]
full = ["serde-prost", "serde-json", "serde-protobuf", "tracing"]

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
thiserror = "1.0.50"
prost = { version = "0.12.1", optional = true }
serde_json = { version = "1.0.108", optional = true }
serde = { version = "1.0.192", features = ["derive"] }
tracing = { version = "0.1.40", features = ["async-await"], optional = true }
anyhow = "1.0.75"

[dev-dependencies]
# NOTE: this is only used for test components and assertions.
anyhow = "1.0.75"
lazy_static = "1.4.0"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
