[package]
name = "bank-accounting"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
eventually = { path = "../../eventually", features = [
    "serde-prost",
    "tracing",
] }
eventually-macros = { path = "../../eventually-macros" }
eventually-postgres = { path = "../../eventually-postgres" }
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
prost = "0.12.3"
rust_decimal = "1.34.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.11.0", features = ["gzip", "transport"] }
tonic-health = "0.11.0"
tonic-reflection = "0.11.0"
tower = "0.4.13"
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "std",
    "registry",
    "env-filter",
] }

[dev-dependencies]

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
