[package]
name = "light_switch"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

[dependencies]
serde = {version="1.0.217", features=["derive"]}
serde_json = {version="1.0.137"}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
thiserror = { version = "2.0.11" }
anyhow = "1.0.95"
async-trait = "0.1.86"
eventually = { features = ["serde-json"], path="../../eventually" }
