[package]
name = "todo-list-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.65"
eventually = { path = "../../eventually", features = ["serde-prost", "tracing"] }
eventually-macros = { path = "../../eventually-macros" }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
prost = "0.11.8"
prost-types = "0.11.8"
thiserror = "1.0.38"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.1", features = ["gzip", "transport"] }
tonic-health = "0.8.0"
tonic-reflection = "0.6.0"
tower = "0.4.11"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.29"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.3", features = ["fmt", "std", "registry", "env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = { version = "0.8.0", features = ["prost"] }
